...
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_edit_bid_enter_amount"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/enterAmountEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentTitle" />

        <EditText
            android:id="@+id/enterAmountEdit"
            android:layout_width="0dp"
...
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@android:string/cancel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAmountText" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dp"
...
