...
                android:text="Pay"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskDetails" />

            <Button
                android:id="@+id/addBidOrMarkDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/activity_view_tasks_requester_add_bid"
...
                mapbox:mapbox_uiScrollGestures="false"
                mapbox:mapbox_uiTiltGestures="false"
                mapbox:mapbox_uiZoomControls="false"
                mapbox:mapbox_uiZoomGestures="false" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bidListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/deleteButton" />
...
