...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myBidsToolbar">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/myBidsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <RelativeLayout
...
